k8s/website/deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: website

spec:
  replicas: 2
  selector:
    matchLabels:
      app: website

  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: devteds/demo-bookstore-website:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
