k8s/website/service.yml
apiVersion: v1
kind: Service

metadata:
  name: website

spec:
  type: NodePort

  selector:
    app: website

  ports:
    - port: 80
      targetPort: 80
